--- a/languages/FWTD-fr_FR.po
+++ b/languages/FWTD-fr_FR.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: Feedweb Plugin\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/feedweb\n"
 "POT-Creation-Date: 2013-10-27 12:04:47+00:00\n"
-"PO-Revision-Date: 2013-12-04 11:31+0200\n"
+"PO-Revision-Date: 2014-02-16 23:29+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.6\n"
+"X-Generator: Poedit 1.6.2\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop\n"
 "X-Poedit-Basepath: .\n"
 
@@ -216,7 +216,7 @@ msgid "Widget Placement:"
 msgstr "Placement du Widget:"
 
 #: feedweb_options.php:444
-msgid "Please choose the placement of the rating widget within a post"
+msgid "Please choose the placement of the rating widget within a post."
 msgstr "S&#39;il vous plaît choisissez le placement du widget dans votre post"
 
 #: feedweb_options.php:450
@@ -246,7 +246,7 @@ msgid "Widget External Background:"
 msgstr "Le fond externe du Widget:"
 
 #: feedweb_options.php:476
-msgid "Please choose the color scheme of your HTML rating widgets"
+msgid "Please choose the color scheme of your HTML rating widgets."
 msgstr "S&#39;il vous plaît choisissez la couleur de votre HTML Widget"
 
 #: feedweb_options.php:482
@@ -258,9 +258,9 @@ msgid "Widget width (pixels):"
 msgstr "Largeur du Widget (pixels):"
 
 #: feedweb_options.php:500
-msgid "Allowed width: 350 to 700 pixels. Recommended width: 400 to 450 pixels."
+msgid "Allowed width: 350 to 500 pixels. Recommended width: 400 to 450 pixels."
 msgstr ""
-"Largeur autorisé: 350 à 700 pixels. Largeur recommandée: 400 à 450 pixels."
+"Largeur autorisé: 350 à 500 pixels. Largeur recommandée: 400 à 450 pixels."
 
 #: feedweb_options.php:515
 msgid "Widgets at the Home/Front Page:"
@@ -313,7 +313,7 @@ msgid "Show"
 msgstr "Montrer"
 
 #: feedweb_options.php:560
-msgid "Display a prompt to insert a rating widget when a post is published"
+msgid "Display a prompt to insert a rating widget when a post is published."
 msgstr ""
 "Afficher une invitation à insérer un widget de notation quand un poste est "
 "publié"
