--- a/languages/FWTD-hi_IN.po
+++ b/languages/FWTD-hi_IN.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: Feedweb Plugin for Wordpress\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/feedweb\n"
 "POT-Creation-Date: 2013-09-01 18:31:51+00:00\n"
-"PO-Revision-Date: 2013-10-09 00:14+0200\n"
+"PO-Revision-Date: 2014-02-16 23:29+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: Hindi\n"
+"Language: hi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.7\n"
+"X-Generator: Poedit 1.6.2\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop\n"
 "X-Poedit-Basepath: .\n"
 
@@ -200,7 +200,7 @@ msgid "Widget Placement:"
 msgstr "विजेट प्लेसमेंट:"
 
 #: feedweb_options.php:444
-msgid "Please choose the placement of the rating widget within a post"
+msgid "Please choose the placement of the rating widget within a post."
 msgstr "एक पोस्ट के भीतर रेटिंग विजेट का प्लेसमेंट को चुनें"
 
 #: feedweb_options.php:450
@@ -228,7 +228,7 @@ msgid "Widget External Background:"
 msgstr "विजेट की बाहरी पृष्ठभूमि:"
 
 #: feedweb_options.php:476
-msgid "Please choose the color scheme of your HTML rating widgets"
+msgid "Please choose the color scheme of your HTML rating widgets."
 msgstr "कृपया अपने HTML रेटिंग विजेट्स का रंग योजना चुनें"
 
 #: feedweb_options.php:482
@@ -240,8 +240,8 @@ msgid "Widget width (pixels):"
 msgstr "विजेट की चौड़ाई (पिक्सेल):"
 
 #: feedweb_options.php:500
-msgid "Allowed width: 350 to 700 pixels. Recommended width: 400 to 450 pixels."
-msgstr "चौड़ाई जिसकी अनुमति है: 350-700 पिक्सल्स. अनुशंसित चौड़ाई: 400-450 पिक्सल्स"
+msgid "Allowed width: 350 to 500 pixels. Recommended width: 400 to 450 pixels."
+msgstr "चौड़ाई जिसकी अनुमति है: 350-500 पिक्सल्स. अनुशंसित चौड़ाई: 400-450 पिक्सल्स"
 
 #: feedweb_options.php:515
 msgid "Widgets at the Home/Front Page:"
@@ -288,7 +288,7 @@ msgid "Show"
 msgstr "दिखाना"
 
 #: feedweb_options.php:560
-msgid "Display a prompt to insert a rating widget when a post is published"
+msgid "Display a prompt to insert a rating widget when a post is published."
 msgstr "एक पोस्ट प्रकाशित करते समय एक रेटिंग विजेट डालने के लिए प्रेरित करें"
 
 #: feedweb_options.php:566
