--- a/languages/FWTD-it_IT.po
+++ b/languages/FWTD-it_IT.po
@@ -5,14 +5,14 @@ msgstr ""
 "Project-Id-Version: Feedweb 1.2.12\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/feedweb\n"
 "POT-Creation-Date: 2012-04-29 07:50:41+00:00\n"
-"PO-Revision-Date: 2012-04-30 21:09+0200\n"
+"PO-Revision-Date: 2014-02-16 23:31+0200\n"
 "Last-Translator: Menashè Eliezer <menashe.eliezer@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Italian\n"
-"X-Poedit-Country: ITALY\n"
+"Language: it_IT\n"
+"X-Generator: Poedit 1.6.2\n"
 
 #: feedweb.php:95
 msgid "Insert Widget"
@@ -44,7 +44,8 @@ msgstr "5 ore"
 
 #: feedweb.php:190
 msgid "You do not have sufficient permissions to access this page."
-msgstr "Non si dispone di autorizzazioni sufficienti per accedere a questa pagina."
+msgstr ""
+"Non si dispone di autorizzazioni sufficienti per accedere a questa pagina."
 
 #: feedweb.php:198
 msgid "Feedweb Plugin Settings"
@@ -68,7 +69,9 @@ msgstr "Widget larghezza (pixel):"
 
 #: feedweb.php:293
 msgid "Allowed width: 350 to 700 pixels. Recommended width: 400 to 450 pixels."
-msgstr "Larghezza consentita: da 350 a 700 pixel. Larghezza consigliata: da 400 a 450 pixel."
+msgstr ""
+"Larghezza consentita: da 350 a 500 pixel. Larghezza consigliata: da 400 a "
+"450 pixel."
 
 #: feedweb.php:299
 msgid "Widgets at the Home/Front Page:"
@@ -79,16 +82,24 @@ msgid "Display Widgets"
 msgstr "Visualizzare i widget"
 
 #: feedweb.php:308
-msgid "Check to display the widgets both in the Front Page and the single post pages."
-msgstr "Marca per visualizzare i widget sia nella pagina iniziale sia nelle singole pagine degli articoli."
+msgid ""
+"Check to display the widgets both in the Front Page and the single post "
+"pages."
+msgstr ""
+"Marca per visualizzare i widget sia nella pagina iniziale sia nelle singole "
+"pagine degli articoli."
 
 #: feedweb.php:317
 msgid "Delay displaying results:"
 msgstr "Ritarda visualizzazione dei risultati:"
 
 #: feedweb.php:325
-msgid "Set the period of time you want to hide voting results after the widget is created."
-msgstr "Imposta il periodo di tempo che si desidera nascondere i risultati delle votazioni dopo che il widget è stato creato."
+msgid ""
+"Set the period of time you want to hide voting results after the widget is "
+"created."
+msgstr ""
+"Imposta il periodo di tempo che si desidera nascondere i risultati delle "
+"votazioni dopo che il widget è stato creato."
 
 #: feedweb.php:334
 msgid "Feedweb Copyright Notice:"
@@ -110,8 +121,7 @@ msgstr "Salva le modifiche"
 msgid "Settings"
 msgstr "Impostazioni"
 
-#: feedweb_settings.php:10
-#: widget_commit.php:10
+#: feedweb_settings.php:10 widget_commit.php:10
 msgid "You are not allowed to be here"
 msgstr "Non è consentito di essere qui"
 
@@ -121,22 +131,30 @@ msgstr "Impossibile aggiornare le impostazioni"
 
 #: feedweb_util.php:323
 msgid "Cannot insert widget into a post published %d days ago"
-msgstr "Non è possibile inserire un widget ad un articolo pubblicato %d giorni fa"
+msgstr ""
+"Non è possibile inserire un widget ad un articolo pubblicato %d giorni fa"
 
 #: feedweb_util.php:331
-msgid "You have created %d widgets in the last 24 hours. The daily limit is %d new widgets"
-msgstr "Lei ha creato %d widget negli ultime 24 ore. Il limite giornaliero è %d nuovi widget"
+msgid ""
+"You have created %d widgets in the last 24 hours. The daily limit is %d new "
+"widgets"
+msgstr ""
+"Lei ha creato %d widget negli ultime 24 ore. Il limite giornaliero è %d "
+"nuovi widget"
 
 #: feedweb_util.php:338
-msgid "You have created %d widgets in the last 30 days. The monthly limit is %d new widgets"
-msgstr "Lei ha creato %d widget negli ultimi 30 giorni. Il limite mensile è %d nuovi widget"
+msgid ""
+"You have created %d widgets in the last 30 days. The monthly limit is %d new "
+"widgets"
+msgstr ""
+"Lei ha creato %d widget negli ultimi 30 giorni. Il limite mensile è %d nuovi "
+"widget"
 
 #: widget_commit.php:29
 msgid "Wordpress cannot insert your widget"
 msgstr "Wordpress non può inserire il suo widget"
 
-#: widget_commit.php:47
-#: widget_commit.php:149
+#: widget_commit.php:47 widget_commit.php:149
 msgid "Cannot connect Feedweb server"
 msgstr "Impossibile connettersi al server Feedweb"
 
@@ -144,9 +162,7 @@ msgstr "Impossibile connettersi al server Feedweb"
 msgid "Wordpress cannot remove your widget"
 msgstr "Wordpress non può rimuovere il suo widget"
 
-#: widget_commit.php:112
-#: widget_commit.php:120
-#: widget_commit.php:128
+#: widget_commit.php:112 widget_commit.php:120 widget_commit.php:128
 msgid "Error in the Post data"
 msgstr "Errore nei dati dell'articolo"
 
@@ -202,8 +218,7 @@ msgstr "Autore:"
 msgid "URL:"
 msgstr "URL:"
 
-#: widget_dialog.php:354
-#: widget_dialog.php:447
+#: widget_dialog.php:354 widget_dialog.php:447
 msgid "Cancel"
 msgstr "Cancellare"
 
@@ -259,9 +274,7 @@ msgstr "Il widget di votazione in articolo %s verrà rimosso"
 msgid "Remove Widget"
 msgstr "Rimuovere widget"
 
-#. #-#-#-#-#  plugin.pot (Feedweb 1.2.11)  #-#-#-#-#
 #. Plugin Name of the plugin/theme
-#. #-#-#-#-#  plugin.pot (Feedweb 1.2.11)  #-#-#-#-#
 #. Author of the plugin/theme
 msgid "Feedweb"
 msgstr "Feedweb"
@@ -271,10 +284,13 @@ msgid "http://wordpress.org/extend/plugins/feedweb/"
 msgstr "http://wordpress.org/extend/plugins/feedweb/"
 
 #. Description of the plugin/theme
-msgid "Expose your blog to the Feedweb reader's community. Promote your views. Get a comprehensive and detailed feedback from your readers."
-msgstr "Esporre il suo blog alla comunità dei lettori Feedweb, favorire le vostre opinioni, ottenere un feedback completo e dettagliato dai suoi lettori."
+msgid ""
+"Expose your blog to the Feedweb reader's community. Promote your views. Get "
+"a comprehensive and detailed feedback from your readers."
+msgstr ""
+"Esporre il suo blog alla comunità dei lettori Feedweb, favorire le vostre "
+"opinioni, ottenere un feedback completo e dettagliato dai suoi lettori."
 
 #. Author URI of the plugin/theme
 msgid "http://feedweb.net"
 msgstr "http://feedweb.net"
-
