--- a/languages/FWTD-pl_PL.po
+++ b/languages/FWTD-pl_PL.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: Feedweb Plugin for Wordpress\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/feedweb\n"
 "POT-Creation-Date: 2013-04-26 19:53:00+00:00\n"
-"PO-Revision-Date: 2013-04-27 13:22+0100\n"
+"PO-Revision-Date: 2014-02-16 23:29+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: Polish\n"
+"Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.5\n"
+"X-Generator: Poedit 1.6.2\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop\n"
 "X-Poedit-Basepath: .\n"
 
@@ -171,7 +171,7 @@ msgstr "Kolory Kontrolki:"
 
 # need to see in context
 #: feedweb_options.php:359
-msgid "Please choose the color scheme of your HTML rating widgets"
+msgid "Please choose the color scheme of your HTML rating widgets."
 msgstr "Wybierz kolory twojej kontrolki Ankieter w formacie HTML"
 
 #: feedweb_options.php:365
@@ -183,9 +183,9 @@ msgid "Widget width (pixels):"
 msgstr "Szerokość kontrolki (pikseli):"
 
 #: feedweb_options.php:387
-msgid "Allowed width: 350 to 700 pixels. Recommended width: 400 to 450 pixels."
+msgid "Allowed width: 350 to 500 pixels. Recommended width: 400 to 450 pixels."
 msgstr ""
-"Dopuszczalna szerokość: 350 do 700 pikseli. Zalecana szerokość: 400 do 450 "
+"Dopuszczalna szerokość: 350 do 500 pikseli. Zalecana szerokość: 400 do 450 "
 "pikseli."
 
 #: feedweb_options.php:393
@@ -234,7 +234,7 @@ msgid "Show"
 msgstr "Pokaż"
 
 #: feedweb_options.php:446
-msgid "Display a prompt to insert a rating widget when a post is published"
+msgid "Display a prompt to insert a rating widget when a post is published."
 msgstr ""
 "Wyświetl zgłoszenie wstawienia kontrolki Ankieter kiedy wpis jest "
 "opublikowany"
