--- a/languages/FWTD-pt_PT.po
+++ b/languages/FWTD-pt_PT.po
@@ -5,14 +5,14 @@ msgstr ""
 "Project-Id-Version: Feedweb 1.2.7\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/feedweb\n"
 "POT-Creation-Date: 2013-09-01 18:31:51+00:00\n"
-"PO-Revision-Date: 2013-10-03 01:46+0200\n"
+"PO-Revision-Date: 2014-02-16 23:29+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: pt_PT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.7\n"
+"X-Generator: Poedit 1.6.2\n"
 
 #: feedweb.php:170 feedweb.php:355
 msgid "Insert Rating Widget"
@@ -207,7 +207,7 @@ msgid "Widget Placement:"
 msgstr "Posicionamento do Widget: "
 
 #: feedweb_options.php:444
-msgid "Please choose the placement of the rating widget within a post"
+msgid "Please choose the placement of the rating widget within a post."
 msgstr ""
 "Por favor, escolha o posicionamento do widget classificação Dentro de um post"
 
@@ -237,7 +237,7 @@ msgid "Widget External Background:"
 msgstr "Fundo Externo do Widget:"
 
 #: feedweb_options.php:476
-msgid "Please choose the color scheme of your HTML rating widgets"
+msgid "Please choose the color scheme of your HTML rating widgets."
 msgstr ""
 "Por favor, escolha o esquema de cores de seus Widgets de Avaliação de HTML"
 
@@ -250,9 +250,9 @@ msgid "Widget width (pixels):"
 msgstr "Largura do Widget (pixeis):"
 
 #: feedweb_options.php:500
-msgid "Allowed width: 350 to 700 pixels. Recommended width: 400 to 450 pixels."
+msgid "Allowed width: 350 to 500 pixels. Recommended width: 400 to 450 pixels."
 msgstr ""
-"Largura Permitida: 350 a 700 pixeis. Largura Recomendada: 400 a 500 pixeis"
+"Largura Permitida: 350 a 500 pixeis. Largura Recomendada: 400 a 500 pixeis"
 
 #: feedweb_options.php:515
 msgid "Widgets at the Home/Front Page:"
@@ -301,7 +301,7 @@ msgid "Show"
 msgstr "Mostrar "
 
 #: feedweb_options.php:560
-msgid "Display a prompt to insert a rating widget when a post is published"
+msgid "Display a prompt to insert a rating widget when a post is published."
 msgstr ""
 "Exibir um prompt para inserir um Widget de Avaliação quando um post é "
 "publicado"
