--- a/languages/FWTD-ru_RU.po
+++ b/languages/FWTD-ru_RU.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Feedweb\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/feedweb\n"
 "POT-Creation-Date: 2014-10-19 13:43:25+00:00\n"
-"PO-Revision-Date: 2014-10-19 22:14+0200\n"
+"PO-Revision-Date: 2015-01-02 01:22+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ru_RU\n"
@@ -97,7 +97,7 @@ msgstr "Руководство"
 
 #: feedweb.php:682
 msgid "Monitor"
-msgstr "Монитор"
+msgstr "График"
 
 #: feedweb.php:683
 msgid "License"
